this is test changes for cicd

--- a/app/views/main/index.html
+++ b/app/views/main/index.html
@@ -12,7 +12,7 @@
                     Dijital Kütüphane Yönetim Sistemi
                 </h1>
                 <p class="lead mb-4">
-                    Modern arayüzü ile kitap rezervasyonu, 
+                    Modern web arayüzü ile kitap rezervasyonu, 
                     yönetimi ve takibi artık çok daha kolay.
                 </p>
                 <div class="d-flex gap-3">
